--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  google_fonts: ^6.2.1
+  flutter_svg: ^2.0.10+1
+  equatable: ^2.0.7
+  dio: ^5.8.0+1
+  flutter_secure_storage: ^9.2.4
+  loading_animation_widget: ^1.3.0
+  flutter_polyline_points: ^2.1.0
+  google_maps_flutter: ^2.6.1
+  location: ^6.0.2
+  crystal_navigation_bar: ^1.0.2
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +68,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
+    - assets/fonts/
+    - assets/icons/
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
