--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   location: ^6.0.2
   crystal_navigation_bar: ^1.0.2
   font_awesome_flutter: ^10.8.0
+  geolocator: ^12.0.0
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +75,7 @@ flutter:
     - assets/fonts/
     - assets/icons/
     - assets/images/
+    - assets/animations/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
