--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,13 @@ dependencies:
   loading_animation_widget: ^1.3.0
   flutter_polyline_points: ^2.1.0
   google_maps_flutter: ^2.6.1
-  location: ^6.0.2
+  location: ^8.0.0
   crystal_navigation_bar: ^1.0.2
   font_awesome_flutter: ^10.8.0
-  geolocator: ^12.0.0
+  geolocator: ^14.0.1
   lottie: ^3.1.3
   jwt_decoder: ^2.0.1
+  http: ^1.4.0 
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
