--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   crystal_navigation_bar: ^1.0.2
   font_awesome_flutter: ^10.8.0
   geolocator: ^14.0.1
+  geocoding: ^4.0.0
   lottie: ^3.1.3
   jwt_decoder: ^2.0.1
   http: ^1.4.0 
