integrated google maps

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="API_KEY" />
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyB9jd3iVquixb7DXDzbs3pt2ZRQ-gcNlaE" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility?hl=en and
