--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   http: ^1.4.0 
   matcher: ^0.12.17
+  webview_flutter: ^4.13.0 
 
 dev_dependencies:
   flutter_test:
